<resources>
    <string name="app_name">SkillCinema</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_profile">My profile</string>

    <string name="hello_start">Start</string>
    <string name="hello_skip">Skip</string>
    <string name="hello_premiere">Find out about premieres</string>
    <string name="hello_collection">Create collections</string>
    <string name="hello_friends">Share with friends</string>

    <string name="home_btn_reload">Reload</string>
    <string name="home_text_error">Error of loading. Check your connection and repeat later</string>
    <string name="home_text_premier">Premiers</string>
    <string name="home_text_populars">Populars</string>
    <string name="home_text_top">Top 250</string>
    <string name="home_text_serials">Serials</string>
    <string name="home_text_no_name">No name</string>
    <string name="home_text_all">All</string>
    <string name="home_text_show_all">Show all</string>

    <string name="detail_text_acters">Starred in the film</string>
    <string name="detail_text_producers">Worked on the film</string>
    <string name="detail_text_gallery">Gallery</string>
    <string name="detail_text_video">Thrillers and fragments</string>
    <string name="detail_text_similar">Similar films</string>
    <string name="detail_text_series">Seasons and series</string>
    <string name="detail_string_time">%1$d h %2$d min</string>
    <string name="detail_string_budget">Budget: %1$s%2$s</string>
    <string name="detail_string_box_office">Box office: %1$s%2$s</string>

    <string name="detail_text_best">The best</string>
    <string name="detail_text_all_films">Filmography</string>
    <string name="detail_text_to_list">To list</string>
    <string name="detail_text_priz">Awards: %1$d</string>

    <string name="series_text_season">Season</string>
    <string name="series_text_number">%1$d Episode.</string>

    <string name="dialog_fullscreen_title">Fullscreen mode</string>
    <string name="dialog_fullscreen_text1">To exit full screen mode, tap the screen.\nTo return to full screen mode, tap the screen again.</string>
    <string name="dialog_fullscreen_text2">To exit full screen mode, rotate your device to portrait mode.\nRotate your device to landscape mode to return to full screen mode.</string>
    <string name="dialog_fullscreen_checkbox">Don\'t show again</string>
    <string name="dialog_fullscreen_button">Okay</string>

    <string name="search_text_no_result">Unfortunately, your search returned no results</string>
    <string name="search_text_actors">Enter the name of the actor you are interested in</string>
    <string name="search_edit_text_title">Films, actors, directors</string>
    <string name="search_set_switch">Actor search mode</string>
    <string name="search_set_button_ok">Apply</string>
    <string name="search_set_title">Search settings</string>
    <string name="search_set_text_rating">Rating</string>
    <string name="search_set_text_rating_value1">Any</string>
    <string name="search_set_text_rating_value2">%1$d-%2$d</string>
    <string name="search_set_text_year">Year</string>
    <string name="search_set_text_year_value">from %1$d to %2$d</string>
    <string name="search_set_text_genre">Genre</string>
    <string name="search_set_text_country">Country</string>
    <string name="search_set_text_all">All</string>
    <string name="search_set_chip_all">All</string>
    <string name="search_set_chip_films">Films</string>
    <string name="search_set_chip_serials">Serials</string>
    <string name="search_set_text_show">Show</string>
    <string name="search_set_chip_date">Date</string>
    <string name="search_set_chip_popularity">Popularity</string>
    <string name="search_set_chip_rating">Rating</string>
    <string name="search_set_text_sort">Sort</string>
    <string name="search_set_text_not_viewed">Not viewed</string>
    <string name="search_set_text_viewed">Viewed</string>
    <string name="search_set_text_matter">Does not matter</string>
    <string name="search_set_text_show_viewed_films">Show viewed films</string>
    <string name="search_set_text_hide_viewed_films">Hide viewed films</string>
    <string name="search_set_toast">The list of countries and genres could not be loaded. Please try again later</string>
    <string name="search_set_title_country">Country</string>
    <string name="search_set_edit_text_country">Input country</string>
    <string name="search_set_title_genre">Genre</string>
    <string name="search_set_edit_text_genre">Input genre</string>
    <string name="search_set_text_no_result">No result</string>
    <string name="search_set_year_text_all">Any year</string>
    <string name="search_set_year_text_from">Search in the period from</string>
    <string name="search_set_year_text_to">Search during the period</string>
    <string name="search_set_year_title">Period</string>
    <string name="search_set_year_toast">Incorrect period</string>

    <string name="search_dialog_back_title">SaveAndExit</string>
    <string name="search_dialog_back_text">Save current settings and exit?</string>
    <string name="search_dialog_back_buttonOk">Okay</string>
    <string name="search_dialog_back_buttonCancel">Cancel</string>
    <string name="search_dialog_back_buttonNo">No</string>
    
    <string name="profile_item_text">Favourites</string>
    <string name="profile_item_text2">Want to see</string>
    <string name="profile_text_collection">Collections</string>
    <string name="profile_text_create_collection">Create user collection</string>
    <string name="profile_text_history">You were interested</string>
    <string name="profile_text_history_see">Viewed</string>
    <string name="profile_toast_empty">Empty list</string>
    <string name="profile_toast_over_cat">There cannot be more than 100 categories</string>
    <string name="profile_image_clean_history">Clean history</string>

    <string name="bottom_sheet_add_collection">Add in collection</string>
    <string name="dialog_add_category">New user category</string>
    <string name="dialog_add_category_button">Add</string>
    <string name="dialog_add_category_editText">Come up with a name for the new category</string>
    <string name="dialog_add_category_empty_name">Empty name</string>
    <string name="dialog_add_category_no_number">Category name cannot start with a number</string>
    <string name="dialog_add_category_no_long">The category name cannot be longer than 50 characters</string>
    <string name="dialog_add_category_uniq">The category name must be unique</string>
    <string name="dialog_add_film_category">The maximum number of films in a category cannot be more than 1000</string>
    <string name="dialog_delete_category_title">Delete category</string>
    <string name="dialog_delete_history_title">Delete history</string>
    <string name="dialog_delete_category_text">Are you sure you want to delete the selected category?</string>
    <string name="dialog_delete_see_text">Are you sure you want to delete your browsing history?</string>
    <string name="dialog_delete_search_text">Are you sure you want to delete your searching history?</string>

    <string name="set_app_source_text">Thrillers source</string>
    <string name="set_app_source_all">Any</string>
    <string name="set_app_source_youtube">Youtube</string>
    <string name="set_app_source_kinopoisk">Kinopoisk</string>
    <string name="set_app_theme_text">App theme</string>
    <string name="set_app_theme_auto">Auto</string>
    <string name="set_app_theme_light">Light</string>
    <string name="set_app_theme_dark">Dark</string>
    <string name="set_app_switch_anim">Animation active</string>
    <string name="set_app_title">Settings</string>

    <string name="transition_name">TransitionName</string>
</resources>