<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/delete_category" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        tools:text="@string/dialog_delete_category_title" />

    <TextView
        android:id="@+id/text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        tools:text="@string/dialog_delete_category_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOk"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/search_dialog_back_buttonOk"
            app:cornerRadius="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNo"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/search_dialog_back_buttonNo"
            app:cornerRadius="8dp"/>

    </LinearLayout>

</LinearLayout>