<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/text_history_see"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="start|center_vertical"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/profile_text_history_see" />

            <TextView
                android:id="@+id/countSee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:paddingEnd="24dp"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                tools:text="100" />

            <ImageView
                android:id="@+id/strelkaSee"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/strelka_blue" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_history_see"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/film_preview"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/emptyHistorySee"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/profile_toast_empty"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/profile_text_collection" />

        <FrameLayout
            android:id="@+id/create_new_cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/add_for_profile"
                android:layout_gravity="start|center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_text_create_collection"
                android:layout_gravity="start|center"
                android:layout_marginStart="32dp" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/category_item" />

        <FrameLayout
            android:id="@+id/text_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="start|center_vertical"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/profile_text_history" />

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:paddingEnd="24dp"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                tools:text="100" />

            <ImageView
                android:id="@+id/strelka"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/strelka_blue" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_history"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/film_preview"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/emptyHistory"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/profile_toast_empty"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>